--- a/styles.css
+++ b/styles.css
@@ -137,8 +137,6 @@ body {
     align-items: center;
     justify-content: start;
     font-size: 1.8rem;
-    padding: 0;
-    margin: 0
 }
 
 .cross {
@@ -167,4 +165,130 @@ li {
 .main {
     grid-column: 2/3;
     background-color: rgba(226,232,240,255);
+    gap: 1rem;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    padding: 1rem 2rem;
+}
+
+.projects {
+    display: grid;
+    grid-column: 1/2;
+    grid-template-rows: auto; /*Create one row, rest of rows are implicitly created by auto-fit*/
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 1fr; /*Size of implicitly created rows*/
+    gap: 2rem;
+}
+
+.projects > h2 {
+    font-size: 1.4rem;
+    margin: 0;
+    margin-bottom: 0.5rem;
+    grid-column: 1 /-1;
+    margin-bottom: -1.5rem;
+}
+
+.project {
+    border-radius: 13px;
+    background-color: white;
+    display: grid;
+    grid-template: 1fr auto / 1rem 1fr;
+}
+
+.project > .side-panel {
+    grid-area: 1/1/3/2;
+    background-color: rgba(107,83,63,255);
+    border-radius: 20px 0 0 20px;
+    width: 75%;
+}
+
+.project > .text {
+    padding: 1rem 1rem 0;
+}
+
+.text > h3 {
+    margin: 0;
+}
+
+.card-buttons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
+    padding: 0 1rem 1rem 0;
+}
+
+.card-buttons img {
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+.announcements-trending {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    gap: 1rem;
+}
+
+.announcements-trending > div {
+    display: flex;
+    flex-direction: column;
+}
+
+.announcements-trending > div > h2 {
+  background-color: rgba(226,232,240,255);
+}
+
+.announcements > .content,
+.trending-content {
+    background-color: white;
+    display: flex;
+    flex: 1;
+    border-radius: 20px;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1rem 2rem;
+    justify-content: space-around;
+}
+
+.announcement-border {
+    width: 100%;
+    height: 1px;
+    background-color: lightgray;
+    
+}
+
+.announcements> h2,
+.trending > h2 {
+    font-size: 1.4rem;
+    margin-bottom: 0.5rem;
+    padding: 0;
+    margin: 0;
+}
+
+.announcement h3,
+.announcement p {
+    margin: 0;
+}
+
+.announcement h3 {
+    font-size: 0.9rem;
+}
+
+.announcement p {
+    opacity: 0.7;
+}
+
+.trend {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.trend > img {
+    border-radius: 50%;
+    height: 3rem;
+    width: 3rem;
+}
+
+.trend > p > .text {
+    opacity: 0.7;
 }
